--- a/DebtBook/DebtBook/DebtBook.csproj
+++ b/DebtBook/DebtBook/DebtBook.csproj
@@ -90,7 +90,8 @@
     <Compile Include="DebterLog.xaml.cs">
       <DependentUpon>DebterLog.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DebtorLogViewModel.cs" />
+    <Compile Include="ViewModel\DebtorLogViewModel.cs" />
+    <Compile Include="Model\Debt.cs" />
     <Compile Include="Model\Debtor.cs" />
     <Compile Include="ViewModel\AddDebtorViewModel.cs" />
     <Compile Include="ViewModel\INavigationService.cs" />
