--- a/Assignment1/DebtBook/DebtBook/DebtBook.csproj
+++ b/Assignment1/DebtBook/DebtBook/DebtBook.csproj
@@ -102,7 +102,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
-    <Compile Include="ViewModel\NavigationService.cs" />
+    <Compile Include="View\NavigationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
